Remove initial Isla code running from demo runner.

--- a/draw.html
+++ b/draw.html
@@ -30,7 +30,7 @@
               "src/demo-runner.js",
               "src/plugins/draw.js",
               function() {
-                new DemoRunner(Draw, []);
+                new DemoRunner(Draw);
               });
     </script>
   </head>
