--- a/draw.html
+++ b/draw.html
@@ -20,6 +20,7 @@
               "src/env-store.js",
               "src/eventer.js",
               "src/code-analyzer.js",
+              "src/expression-describer.js",
               "src/mapper.js",
               "src/mouser.js",
               "src/node-describer.js",
