Pass mouse events as tokens/lines to demo via demoTalker.

--- a/draw.html
+++ b/draw.html
@@ -26,6 +26,7 @@
               "src/mouser.js",
               "src/console-indicator.js",
               "src/text-helper.js",
+              "src/canvas-helper.js",
               "src/helper.js",
               "src/text-grabber.js",
               "src/highlighter.js",
