Put demos in folder called demos.

--- a/draw.html
+++ b/draw.html
@@ -32,7 +32,7 @@
               "src/highlighter.js",
               "src/terminal.js",
               "src/demo-runner.js",
-              "src/plugins/draw.js",
+              "src/demos/draw.js",
               function() {
                 new DemoRunner(Draw);
               });
