First working version of Tutor.

--- a/draw.html
+++ b/draw.html
@@ -17,6 +17,8 @@
               "node_modules/isla/src/library.js",
               "node_modules/isla/src/parser.js",
               "node_modules/isla/src/interpreter.js",
+              "src/ui.js",
+              "src/tutor.js",
               "src/env-store.js",
               "src/eventer.js",
               "src/code-analyzer.js",
@@ -40,8 +42,8 @@
   </head>
   <body>
     <h1>Program with Isla</h1>
+    <div id="tutor"></div>
     <div class="console-canvas-container">
-      <div id="suggestions">Write <strong>sun is a circle</strong> below</div>
       <div id="left">
         <div class="console" id="console"></div>
       </div>
