Disable text help for now.

--- a/draw.html
+++ b/draw.html
@@ -49,6 +49,6 @@
       </div>
       <canvas id="canvas" width="398" height="398"></canvas>
     </div>
-    <div id="help"></div>
+    <!-- <div id="help"></div> -->
   </body>
 </html>
