Do quick first pass at tipper.

--- a/draw.html
+++ b/draw.html
@@ -18,6 +18,7 @@
               "node_modules/isla/src/parser.js",
               "node_modules/isla/src/interpreter.js",
               "src/ui.js",
+              "src/tipper.js",
               "src/tutor.js",
               "src/env-store.js",
               "src/eventer.js",
@@ -50,5 +51,6 @@
       <canvas id="canvas" width="398" height="398"></canvas>
     </div>
     <!-- <div id="help"></div> -->
+    <div id="tips"></div>
   </body>
 </html>
