--- a/draw.html
+++ b/draw.html
@@ -18,7 +18,6 @@
               "node_modules/isla/src/parser.js",
               "node_modules/isla/src/interpreter.js",
               "src/ui.js",
-              "src/tipper.js",
               "src/tutor.js",
               "src/env-store.js",
               "src/eventer.js",
@@ -50,7 +49,6 @@
       </div>
       <canvas id="canvas" width="398" height="398"></canvas>
     </div>
-    <!-- <div id="help"></div> -->
-    <div id="tips"></div>
+    <div id="help"></div>
   </body>
 </html>
