Add homepage link for shopping basket demo.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <img src="images/blank.png" width="200" height="200" />
         </a>
         <div class="title"><a href="/teddy-bears.html">
-          2. Make a teddy bear family
+          2. Teddy bear family
         </a></div>
       </div>
 
@@ -32,7 +32,16 @@
           <img src="images/solar_system.png" width="200" height="200" />
         </a>
         <div class="title"><a href="/solar_system.html">
-          3. Make some planets
+          3. Planets
+        </a></div>
+      </div>
+
+      <div class="grid-element">
+        <a href="/shopping_basket.html">
+          <img src="images/shopping_basket.png" width="200" height="200" />
+        </a>
+        <div class="title"><a href="/shopping_basket.html">
+          4. Shopping basket
         </a></div>
       </div>
     </div>
