--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       </div>
 
       <div class="grid-element">
-        <a href="/solar_system.html">
-          <img src="images/solar_system.png" width="200" height="200" />
+        <a href="/planets.html">
+          <img src="images/planets.png" width="200" height="200" />
         </a>
-        <div class="title"><a href="/solar_system.html">
+        <div class="title"><a href="/planets.html">
           3. Planets
         </a></div>
       </div>
