Hide shopping basket demo from main page for now.

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
         </a></div>
       </div>
 
-      <div class="grid-element">
+<!--       <div class="grid-element">
         <a href="/shopping_basket.html">
           <img src="images/shopping_basket.png" width="200" height="200" />
         </a>
         <div class="title"><a href="/shopping_basket.html">
           4. Shopping basket
         </a></div>
-      </div>
+      </div> -->
     </div>
   </body>
 </html>
