Try different name for drawing demo.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="/draw.html">
           <img src="images/draw.png" width="200" height="200" />
         </a>
-        <div class="title"><a href="/draw.html">1. Draw</a></div>
+        <div class="title"><a href="/draw.html">1. Shapes</a></div>
       </div>
 
       <div class="grid-element">
