Link title to home.

--- a/draw.html
+++ b/draw.html
@@ -41,7 +41,7 @@
     </script>
   </head>
   <body>
-    <h1>Program with Isla</h1>
+    <h1><a href='/'>Program with Isla</a></h1>
     <div id="tutor"></div>
     <div class="console-canvas-container">
       <div id="left">
