--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link type="text/css" rel="stylesheet" href="resources/main.css" />
   </head>
   <body>
-    <h1>Program with Isla</h1>
 
     <div class="intro">
+    <h1><a href='/'>Program with Isla</a></h1>
     </div>
 
     <div class="grid">
