--- a/index.html
+++ b/index.html
@@ -45,5 +45,9 @@
         </a></div>
       </div> -->
     </div>
+
+    <div class="footer">
+      by <a href='http://maryrosecook.com'>Mary Rose Cook</a>
+    </div>
   </body>
 </html>
