--- a/planets.html
+++ b/planets.html
@@ -33,6 +33,7 @@
               "src/text-grabber.js",
               "src/highlighter.js",
               "src/terminal.js",
+              "src/demo-utils.js",
               "src/demo-runner.js",
               "src/demos/planets.js",
               function() {
