--- a/shapes.html
+++ b/shapes.html
@@ -35,9 +35,9 @@
               "src/terminal.js",
               "src/demo-utils.js",
               "src/demo-runner.js",
-              "src/demos/draw.js",
+              "src/demos/shapes.js",
               function() {
-                new DemoRunner(Draw);
+                new DemoRunner(Shapes);
               });
     </script>
   </head>
