--- a/index.html
+++ b/index.html
@@ -6,25 +6,13 @@
   </head>
   <body>
     <h1><a href='/'>Program with Isla</a></h1>
-    <div class="strapline">
-      Coding for young kids
-    </div>
 
     <div class="grid">
       <div class="grid-element">
-        <a href="/draw.html">
-          <img src="images/draw.png" width="200" height="200" />
+        <a href="/shapes.html">
+          <img src="images/shapes.png" width="200" height="200" />
         </a>
-        <div class="title"><a href="/draw.html">1. Shapes</a></div>
-      </div>
-
-      <div class="grid-element">
-        <a href="/teddy-bears.html">
-          <img src="images/blank.png" width="200" height="200" />
-        </a>
-        <div class="title"><a href="/teddy-bears.html">
-          2. Teddy bear family
-        </a></div>
+        <div class="title"><a href="/shapes.html">1. Shapes</a></div>
       </div>
 
       <div class="grid-element">
@@ -32,7 +20,16 @@
           <img src="images/planets.png" width="200" height="200" />
         </a>
         <div class="title"><a href="/planets.html">
-          3. Planets
+          2. Planets
+        </a></div>
+      </div>
+
+      <div class="grid-element">
+        <a href="/family.html">
+          <img src="images/blank.png" width="200" height="200" />
+        </a>
+        <div class="title"><a href="/family.html">
+          3. Teddy bear family
         </a></div>
       </div>
 
