--- a/index.html
+++ b/index.html
@@ -1,50 +1,44 @@
 <!doctype html>
 <html>
   <head>
-    <title>Program with Isla</title>
+    <title>Isla - a programming language for children</title>
     <link type="text/css" rel="stylesheet" href="resources/main.css" />
   </head>
   <body>
-    <h1><a href='/'>Program with Isla</a></h1>
+    <h1><a href='/'>Isla</a></h1>
+    <div class="strapline">a programming language for children</div>
 
     <div class="grid">
       <div class="grid-element">
         <a href="/shapes.html">
           <img src="images/shapes.png" width="200" height="200" />
         </a>
-        <div class="title"><a href="/shapes.html">1. Shapes</a></div>
+        <div class="title"><a href="/shapes.html">Shapes</a></div>
       </div>
 
       <div class="grid-element">
         <a href="/planets.html">
           <img src="images/planets.png" width="200" height="200" />
         </a>
-        <div class="title"><a href="/planets.html">
-          2. Planets
-        </a></div>
+        <div class="title"><a href="/planets.html">Planets</a></div>
       </div>
-
-      <div class="grid-element">
-        <a href="/family.html">
-          <img src="images/blank.png" width="200" height="200" />
-        </a>
-        <div class="title"><a href="/family.html">
-          3. Teddy bear family
-        </a></div>
-      </div>
-
-<!--       <div class="grid-element">
-        <a href="/shopping_basket.html">
-          <img src="images/shopping_basket.png" width="200" height="200" />
-        </a>
-        <div class="title"><a href="/shopping_basket.html">
-          4. Shopping basket
-        </a></div>
-      </div> -->
     </div>
 
     <div class="footer">
-      by <a href='http://maryrosecook.com'>Mary Rose Cook</a>
+      <a href='https://github.com/maryrosecook/isla'>github</a>&nbsp;
+      <a href='http://maryrosecook.com'>mary rose cook</a>
     </div>
+
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-24453347-2']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
   </body>
 </html>
