--- a/shapes.html
+++ b/shapes.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Program with Isla - Draw</title>
+    <title>Isla - Shapes</title>
     <link type="text/css" rel="stylesheet" href="resources/main.css" />
     <script src="/resources/head.loader.js"></script>
     <script type="text/javascript">
@@ -42,7 +42,7 @@
     </script>
   </head>
   <body>
-    <h1><a href='/'>Program with Isla</a></h1>
+    <h1><a href='/'>Shapes</a></h1>
     <div id="tutor"></div>
     <div class="console-canvas-container">
       <div id="left">
