--- a/shapes.html
+++ b/shapes.html
@@ -6,36 +6,44 @@
     <script src="/resources/head.loader.js"></script>
     <script type="text/javascript">
       head.js("node_modules/underscore/underscore-min.js",
-              "node_modules/isla/node_modules/multimethod/multimethod-min.js",
+              "node_modules/multimethod/multimethod-min.js",
               "node_modules/isla/node_modules/pegjs/lib/peg.js",
               "resources/jquery-min.js",
+
               "resources/jquery-blink.js",
               "resources/jquery.console.js",
-              "node_modules/isla/src/isla.js",
-              "node_modules/isla/src/utils.js",
-              "node_modules/isla/src/grammar.js",
-              "node_modules/isla/src/library.js",
-              "node_modules/isla/src/parser.js",
-              "node_modules/isla/src/interpreter.js",
-              "src/ui.js",
-              "src/tutor.js",
-              "src/env-store.js",
-              "src/eventer.js",
-              "src/code-analyzer.js",
-              "src/expression-describer.js",
-              "src/node-describer.js",
-              "src/mapper.js",
-              "src/mouser.js",
-              "src/console-indicator.js",
-              "src/text-helper.js",
-              "src/canvas-helper.js",
-              "src/helper.js",
-              "src/text-grabber.js",
-              "src/highlighter.js",
-              "src/terminal.js",
-              "src/demo-utils.js",
-              "src/demo-runner.js",
-              "src/demos/shapes.js",
+
+              "node_modules/isla/src/isla.min.js",
+              // "node_modules/isla/src/isla.js",
+              // "node_modules/isla/src/utils.js",
+              // "node_modules/isla/src/grammar.js",
+              // "node_modules/isla/src/library.js",
+              // "node_modules/isla/src/parser.js",
+              // "node_modules/isla/src/interpreter.js",
+
+
+              "src/ide.min.js",
+              // "src/ui.js",
+              // "src/tutor.js",
+              // "src/env-store.js",
+              // "src/eventer.js",
+              // "src/code-analyzer.js",
+              // "src/expression-describer.js",
+              // "src/node-describer.js",
+              // "src/mapper.js",
+              // "src/mouser.js",
+              // "src/console-indicator.js",
+              // "src/text-helper.js",
+              // "src/canvas-helper.js",
+              // "src/helper.js",
+              // "src/text-grabber.js",
+              // "src/highlighter.js",
+              // "src/terminal.js",
+              // "src/demo-utils.js",
+              // "src/demo-runner.js",
+
+              "src/demos/shapes.min.js",
+              // "src/demos/shapes.js",
               function() {
                 new DemoRunner(Shapes);
               });
