Add about page.

--- a/about.html
+++ b/about.html
@@ -1,27 +1,24 @@
 <!doctype html>
 <html>
   <head>
-    <title>Isla - a programming language for children</title>
+    <title>Isla - About</title>
     <link type="text/css" rel="stylesheet" href="resources/main.css" />
   </head>
   <body>
     <h1><a href='/'>Isla</a></h1>
     <div class="strapline">a programming language for children</div>
 
-    <div class="grid">
-      <div class="grid-element">
-        <a href="/shapes.html">
-          <img src="images/shapes.png" width="200" height="200" />
-        </a>
-        <div class="title"><a href="/shapes.html">Shapes</a></div>
-      </div>
+    <div class="main-text">
+      <h2>About</h2>
 
-      <div class="grid-element">
-        <a href="/planets.html">
-          <img src="images/planets.png" width="200" height="200" />
-        </a>
-        <div class="title"><a href="/planets.html">Planets</a></div>
-      </div>
+      <p>The games on this website teach a child to program.</p>
+
+      <p>The Isla programming language is open source and the
+        <a href='https://github.com/maryrosecook/isla'>code</a>
+        is on Github. The
+        <a href='https://github.com/maryrosecook/codewithisla'>code</a>
+        that powers the games on this website</a> is also open source
+        and also on Github.</p>
     </div>
 
     <div class="footer">
