--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1><a href='/'>Isla</a></h1>
-    <div class="strapline">a programming language for children</div>
+    <div class="strapline">computer programming for children</div>
 
     <div class="main-text">
       <h2>About</h2>
