--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
   <head>
-    <title>Isla - a programming language for children</title>
+    <title>Isla - computer programming for children</title>
     <link type="text/css" rel="stylesheet" href="resources/main.css" />
   </head>
   <body>
     <h1><a href='/'>Isla</a></h1>
-    <div class="strapline">a programming language for children</div>
+    <div class="strapline">computer programming for children</div>
 
     <div class="grid">
       <div class="grid-element">
